Fixed Shadow covering part of consumer Alert block

--- a/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/layout/_frontpage.scss
+++ b/docroot/profiles/custom/webny/themes/custom/dfs_ny/sass/layout/_frontpage.scss
@@ -90,7 +90,7 @@
   min-height: 120px;
   height: auto;
   background-color: #09464c;
-  z-index: 4;
+  z-index: 10;
 }
 
 .alerts-text {
